--- a/NextJS-main/my-app/src/styles/globals.css
+++ b/NextJS-main/my-app/src/styles/globals.css
@@ -5,7 +5,7 @@
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
-  color: rgb(0, 0, 0);
+  color: var(--text-color-primary)
 }
 
 :root {
