getting all groups ids of reposts

--- a/NextJS-main/my-app/src/styles/mainCard.module.css
+++ b/NextJS-main/my-app/src/styles/mainCard.module.css
@@ -58,6 +58,7 @@
 }
 
 .attachments {
+    padding-top: .5em;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -67,6 +68,7 @@
 
 .img {
     border-radius: .5rem;
+    min-height: 150px;
     max-height: 150px;
     object-fit: contain;
 }
