--- a/NextJS-main/my-app/src/styles/index.module.css
+++ b/NextJS-main/my-app/src/styles/index.module.css
@@ -9,3 +9,9 @@
     flex-direction: column;
     min-height: 100vh;
 }
+
+@media (max-width: 800px) {
+    .col {
+        display: block;
+    }
+}
