--- a/NextJS-main/my-app/src/styles/main.module.css
+++ b/NextJS-main/my-app/src/styles/main.module.css
@@ -14,7 +14,16 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    padding: 2rem;
+    padding: 1rem;
     max-width: 100%;
 }
 
+@media (max-width: 800px) {
+    .container {
+        width: 100%;
+        max-width: 100%;
+    }
+    .cards{
+        
+    }
+}
