--- a/NextJS-main/my-app/src/styles/mainCard.module.css
+++ b/NextJS-main/my-app/src/styles/mainCard.module.css
@@ -55,6 +55,7 @@
     justify-content: space-between;
     display: flex;
     flex-wrap: wrap;
+
 }
 
 .text {
@@ -109,4 +110,13 @@
 
 #target:hover {
     font-size: 16px;
+}
+
+@media (max-width: 870px) {
+    .footer{
+        display: flex;
+        flex-direction: column;
+        gap: .5em;
+        
+    }
 }
