--- a/NextJS-main/my-app/src/styles/main.module.css
+++ b/NextJS-main/my-app/src/styles/main.module.css
@@ -6,7 +6,6 @@
     display: flex;
     width: 80%;
     max-width: 80%;
-    min-height: 100%;
     background-color: var(--bgcolor-primary);
 }
 
@@ -20,10 +19,15 @@
 
 @media (max-width: 800px) {
     .container {
+        flex-grow: 1;
         width: 100%;
         max-width: 100%;
+        min-height: 0;
     }
     .cards{
-        
+        width: 100%;
+        max-width: 100%;
+        height: 100%;
+        min-height: 100%;
     }
 }
