--- a/NextJS-main/my-app/src/styles/mainCard.module.css
+++ b/NextJS-main/my-app/src/styles/mainCard.module.css
@@ -62,6 +62,7 @@
     padding: 8px 0 0 0;
     color: var(--text-color-primery);
     font-size: 13px;
+    overflow-wrap: break-word;
 }
 
 .attachments {
@@ -75,7 +76,7 @@
 
 .img {
     border-radius: .5rem;
-    min-height: 150px;
+    min-width: 100%;
     max-height: 150px;
     object-fit: contain;
 }
@@ -117,6 +118,11 @@
         display: flex;
         flex-direction: column;
         gap: .5em;
-        
+    }
+    .activities{
+        flex-wrap: wrap;
+    }
+    .links {
+        flex-wrap: wrap;
     }
 }
