--- a/NextJS-main/my-app/src/styles/menubar.module.css
+++ b/NextJS-main/my-app/src/styles/menubar.module.css
@@ -14,6 +14,7 @@
     border: 1px solid var(--text-primary);
     border-radius: 1rem;
     padding: 5px;
+    width: 100%;
 }
 
 .input:focus-visible {
